[project]
name = "reponow"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "ipython>=9.3.0",
    "rich>=14.0.0",
    "rope>=1.13.0",
    "yapf>=0.43.0",
]

[project.scripts]
wcl = "reponow.wcl:main"
open_repo = "reponow.opener:main"

[tool.pylint.'MESSAGES CONTROL']
disable = ['missing-module-docstring', 'line-too-long' ]

[project.urls]
Homepage = "https://github.com/g0t4/course-python-functions-modules"

